gnome-tour 43.0
===================
* Translations updates

gnome-tour 43.beta
===================
* Translations updates

gnome-tour 42.0
===================
* Translations updates

gnome-tour 42.beta
===================
* Port to GTK4 / libadwaita
* Drop the video feature
* i18n fixes and translations updates

gnome-tour 41.rc
===================
* content: add back workspaces slide
* Add assets for GNOME 41 (#41, #42, #45)
* desktop: Add categories
* Translations updates

gnome-tour 40.0
===================
* Adapt the pages for GNOME Shell changes
* Translations updates

gnome-tour 3.37.91
===================
 * First release of GNOME Tour & Greater