@@ -1,3 +1,8 @@
+gnome-tour 46.rc
+================
+* String improvements
+* Translations updates
+
 gnome-tour 43.0
 ===================
 * Translations updates
